src/test/resources/insight/annotators/UnusedParameters.soy
{namespace space}

{element .foo}
  {@param <error descr="Parameter unusedParam is unused.">unusedParam</error>: string}
  {@state <error descr="State variable unusedState is unused.">unusedState</error>:= 'test'}
{/element}
